[package]
name = "cogo-http-techempower"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2018"


[dependencies]
cogo = {git="https://github.com/co-rs/cogo.git",branch = "main"}
cogo-http = {version = "0.1"}
mimalloc = "0.1"
num_cpus = "1.0"
oorandom = "11"
smallvec = "1.1"
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
#must dep
#cdbc = {version = "0.1"}
#cdbc-pg = {version = "0.1"}

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
